/*
 * $Id: ChangeLog,v 1.1549 2003/10/04 18:57:56 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-10-04 21:47 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    + Added HB_EXPORT to hb_vmRegisterGlobals()

2003-10-14 16:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  + doc/en/operator.txt
    ! Started doc for operators
  * doc/genhtm.rsp
    + en\operator.txt to list
  * utils/hbdoc/rtf.prg
    ! minor fix

2003-10-04 10:58 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.sly
    ! More improvements to parse erros.
      /* I belive our parse errors now are more helpful then Clipper. */

2003-10-04 11:15 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tbrowse.prg
    ! Fix Add, Del, Insert and Set of columns, don't evaluate block of
      column in this step if tbrowse is not displayed yet.
      Fix Configure() for initilize all of internal settings of columns
      in the first stabilize.
      Reported by Lars Hedman

2003-10-03 19:48 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * contrib/WoopGUI/env/bccWin32.Mak
     - Removed all settings and settings' dependancy.

   * source/compiler/harbour.slx
     ! Fixed minor bug related to strings that open with <['> or <["> but ending with just <]>
     % Greatly optimized handling of string literals, and Escaped Strings <E"...">.
       /* Compiler appears noticably faster. */

2003-10-02 22:49 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/tobject.prg
    ! Fixed to allow keys of just ONE character.
      /*
         Please note that OOP Syntax must be used with keys of one letter.

         oAA[ 'A' ] will fail because the 'A' is overloaded and used as a
         NUMERIC Index in the context of Arrays.

         Use:

            oAA:A

         Or:
            __ObjSendMsg( oAA, "A" )
